--- a/aula05/ex002.html
+++ b/aula05/ex002.html
@@ -20,9 +20,8 @@
     <h1>Olá Mundo!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo omnis harum, deleniti, fugiat expedita repellendus id optio consectetur ipsum et aliquam ad voluptates provident? Voluptates laboriosam harum iusto quis voluptatem?</p>
     <script>
-         window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual o seu nome?')
+        var nome = window.prompt('Qual o seu nome?') 
+        window.alert ('é um grande prazer em te conhecer, ' + nome + '!')
     </script>
 </body>
 </html>
