--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -20,9 +20,10 @@
     <h1>Olá Mundo!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo omnis harum, deleniti, fugiat expedita repellendus id optio consectetur ipsum et aliquam ad voluptates provident? Voluptates laboriosam harum iusto quis voluptatem?</p>
     <script>
-         window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual o seu nome?')
+        var n1 = Number(window.prompt ('Digite um número:')) 
+        var n2 = Number(window.prompt ('Digite outro número:')) 
+        var s = n1 + n2
+        window.alert('A soma dos valores é '+ s)
     </script>
 </body>
 </html>
